[gd_scene load_steps=18 format=3 uid="uid://gg6dyf6kdjoe"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_nspja"]
[ext_resource type="Texture2D" uid="uid://bm23gk52shlqt" path="res://Assets/Art/Players/Player_Shadow.png" id="3_w1e2p"]
[ext_resource type="PackedScene" uid="uid://ci0kmjp7q6pjx" path="res://Scenes/Shadow/Shadow.tscn" id="3_yadio"]
[ext_resource type="Texture2D" uid="uid://b5pbn13cpemmf" path="res://Assets/Art/Players/Player_Base.png" id="4_ko74s"]
[ext_resource type="Texture2D" uid="uid://dulyoovok78mr" path="res://Assets/Art/Players/Player_CDark.png" id="5_x8ru5"]
[ext_resource type="Texture2D" uid="uid://48rrpuu5g3sb" path="res://Assets/Art/Players/Player_CLight.png" id="6_nfuxt"]
[ext_resource type="Texture2D" uid="uid://cu8ej7abeiob2" path="res://Assets/Art/Players/Player_Eye_Inner.png" id="7_4hdsk"]
[ext_resource type="Texture2D" uid="uid://c5k2gfi21qpm8" path="res://Assets/Art/Players/Player_Eye_Outer.png" id="8_a5777"]
[ext_resource type="Texture2D" uid="uid://cmr7trsxaiop5" path="res://Assets/Art/Players/Player_Outline.png" id="9_t0k02"]
[ext_resource type="Texture2D" uid="uid://qtkohs13ir83" path="res://Assets/Art/Players/Player_Hair.png" id="10_eo34k"]
[ext_resource type="AudioStream" uid="uid://boe8oyax6mptg" path="res://Assets/Sound/Effects/Hit_1.mp3" id="11_77rom"]
[ext_resource type="AudioStream" uid="uid://m7gl0qloepn6" path="res://Assets/Sound/Effects/Shoot_1.mp3" id="12_iqk2o"]
[ext_resource type="AudioStream" uid="uid://b35ahci2g574w" path="res://Assets/Sound/Effects/Bouncec_1.mp3" id="13_uqsr1"]
[ext_resource type="Texture2D" uid="uid://dufqophshp574" path="res://Assets/Art/Basic Shapes/Arrow.png" id="14_ilmqs"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_u2gy5"]
bounce = 0.75

[sub_resource type="CircleShape2D" id="CircleShape2D_wjdho"]
radius = 64.4981

[sub_resource type="CircleShape2D" id="CircleShape2D_xp2ys"]
radius = 64.4981

[node name="Player" type="RigidBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 15
input_pickable = true
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_u2gy5")
script = ExtResource("1_nspja")

[node name="Sprite_Arrow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.278431)
rotation = -3.14159
scale = Vector2(4, 4)
texture = ExtResource("14_ilmqs")
centered = false
offset = Vector2(0, -25)

[node name="Shadow" parent="." instance=ExtResource("3_yadio")]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_w1e2p")
gi_Max_Track = 2

[node name="Sprites" type="Node2D" parent="."]
rotation = -1.5708
scale = Vector2(0.25, 0.25)

[node name="Base" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0, 0.722479, 0.632888, 1)
texture = ExtResource("4_ko74s")

[node name="PlayerCDark" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0, 0.76658, 0.687658, 1)
texture = ExtResource("5_x8ru5")

[node name="PlayerCLight" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0.869173, 0.607931, 0.988909, 1)
texture = ExtResource("6_nfuxt")

[node name="PlayerEyeOuter" type="Sprite2D" parent="Sprites"]
self_modulate = Color(1, 0.86, 0.990667, 1)
texture = ExtResource("8_a5777")

[node name="PlayerEyeInner" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0.976471, 0.486275, 1, 1)
texture = ExtResource("7_4hdsk")

[node name="PlayerOutline" type="Sprite2D" parent="Sprites"]
texture = ExtResource("9_t0k02")

[node name="PlayerHair" type="Sprite2D" parent="Sprites"]
texture = ExtResource("10_eo34k")

[node name="Collision_Shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_wjdho")

[node name="Sound_Area" type="Area2D" parent="." groups=["Sound_Area"]]
visible = false
collision_layer = 16
collision_mask = 16

[node name="Collision_Shape" type="CollisionShape2D" parent="Sound_Area"]
shape = SubResource("CircleShape2D_xp2ys")

[node name="Hit_Audio_Player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_77rom")

[node name="Shoot_Audio_Player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_iqk2o")

[node name="Bounce_Audio_Player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_uqsr1")
pitch_scale = 0.75

[connection signal="area_entered" from="Sound_Area" to="." method="_on_sound_area_area_entered"]
